@@ -127,7 +127,9 @@ class ContratoControllerTest {
     void testObtenerPorVencer() throws Exception {
         mockSecurityContext();
 
-        List<Contrato> contratos = Arrays.asList(new Contrato());
+        ContratoDTO dto = new ContratoDTO();
+        dto.setId(1L); // opcional, pero útil
+        List<ContratoDTO> contratos = List.of(dto);
 
         Mockito.when(contratoService.obtenerContratosPorVencer(15)).thenReturn(contratos);
 
@@ -137,6 +139,7 @@ class ContratoControllerTest {
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.length()").value(1));
     }
+
 
     @Test
     void testObtenerPorVencerDefault() throws Exception {
@@ -290,6 +293,91 @@ class ContratoControllerTest {
                         .header("Authorization", token)
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(dto)))
+                .andExpect(status().isBadRequest())
+                .andExpect(content().string("Contrato no encontrado"));
+    }
+
+    @Test
+    void testObtenerTodos() throws Exception {
+        mockSecurityContext();
+
+        Contrato contrato1 = new Contrato();
+        contrato1.setId(1L);
+        Contrato contrato2 = new Contrato();
+        contrato2.setId(2L);
+
+        ContratoDTO dto1 = new ContratoDTO();
+        dto1.setId(1L);
+        ContratoDTO dto2 = new ContratoDTO();
+        dto2.setId(2L);
+
+        Mockito.when(contratoService.obtenerTodos()).thenReturn(List.of(contrato1, contrato2));
+        Mockito.when(contratoService.convertirAContratoDTO(contrato1)).thenReturn(dto1);
+        Mockito.when(contratoService.convertirAContratoDTO(contrato2)).thenReturn(dto2);
+
+        mockMvc.perform(get("/api/contratos")
+                        .header("Authorization", token))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.length()").value(2))
+                .andExpect(jsonPath("$[0].id").value(1))
+                .andExpect(jsonPath("$[1].id").value(2));
+    }
+    @Test
+    void testObtenerAceptadosPorCliente() throws Exception {
+        mockSecurityContext();
+
+        Contrato contratoAceptado = new Contrato();
+        contratoAceptado.setId(1L);
+        contratoAceptado.setEstado(EstadoContrato.ACEPTADO);
+
+        Contrato contratoRechazado = new Contrato();
+        contratoRechazado.setId(2L);
+        contratoRechazado.setEstado(EstadoContrato.RECHAZADO);
+
+        Mockito.when(contratoService.obtenerTodosPorCliente(1L))
+                .thenReturn(List.of(contratoAceptado, contratoRechazado));
+
+        ContratoDTO dtoAceptado = new ContratoDTO();
+        dtoAceptado.setId(1L);
+        dtoAceptado.setEstado(EstadoContrato.ACEPTADO);
+
+        Mockito.when(contratoService.convertirAContratoDTO(contratoAceptado)).thenReturn(dtoAceptado);
+
+        mockMvc.perform(get("/api/contratos/cliente/1/aceptados")
+                        .header("Authorization", token))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.length()").value(1))
+                .andExpect(jsonPath("$[0].id").value(1));
+    }
+
+    @Test
+    void testObtenerContratoPorId() throws Exception {
+        mockSecurityContext();
+
+        Contrato contrato = new Contrato();
+        contrato.setId(1L);
+
+        ContratoDTO dto = new ContratoDTO();
+        dto.setId(1L);
+
+        Mockito.when(contratoService.obtenerPorId(1L)).thenReturn(contrato);
+        Mockito.when(contratoService.convertirAContratoDTO(contrato)).thenReturn(dto);
+
+        mockMvc.perform(get("/api/contratos/1")
+                        .header("Authorization", token))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.id").value(1));
+    }
+
+    @Test
+    void testObtenerContratoPorIdNoExiste() throws Exception {
+        mockSecurityContext();
+
+        Mockito.when(contratoService.obtenerPorId(99L))
+                .thenThrow(new RuntimeException("Contrato no encontrado"));
+
+        mockMvc.perform(get("/api/contratos/99")
+                        .header("Authorization", token))
                 .andExpect(status().isBadRequest())
                 .andExpect(content().string("Contrato no encontrado"));
     }
